Revert change in .label top-margin to align correct/incorrect labels

--- a/css/app.css
+++ b/css/app.css
@@ -9699,7 +9699,7 @@ br + kbd {
     font-weight:600;
     font-size:16px;
     letter-spacing: 0.5px;
-    margin: 10px 0 -15px 20px;
+    margin: 20px 0 -15px 20px;
 }
 
 .article .incorrect {
